added openapi spec to the rest of the services
